testsuite/bsc.interra/preprocessorTestcases/include/include_Test1.bsv.bsc-out.expected
checking package dependencies
Error: "include_Test1.bsv", line 4, column 10: (P0148)
  Expected '"' or '<' after `include
